--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/chai": "^4.0.5",
     "@types/mocha": "^2.2.44",
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "express": "^4.16.2",
+    "mocha": "^4.0.1",
+    "webpack-dev-middleware": "^1.12.2"
   }
 }
