--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "parser.js",
   "scripts": {
     "build": "./node_modules/.bin/tsc",
-    "generate": "npm run build && node dist/index.js",
+    "console": "node dist/index.js",
+    "browser": "cd client && npm start",
     "pretest": "./node_modules/.bin/tsc tests/evaluator.test.ts --module commonjs --outDir ./tests/dist",
-    "test": "./node_modules/.bin/mocha ./tests/dist/**/*.test.js"
+    "test": "./node_modules/.bin/mocha ./tests/dist/**/*.test.js",
+    "postinstall": "npm run build && cd client && npm install"
   },
   "author": "",
   "license": "ISC",
